# ai-pkg

./: .gitignore  PKGBUILD  README.md  install.sh  pyproject.toml  uninstall.sh
.github/release_notes/: v0.1.6.md
.github/workflows/: ci.yml  release.yml
scripts/: ai-pkg  update_pkgbuild.py
src/ai_pkg/: __init__.py  backends.py  banner.py  cli.py  core.py
