[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pkg"
version = "0.1.0"
description = "AI-powered package recommender for Arch Linux"
authors = [{ name = "Rohan Kumar Singh", email = "rohankrsingh125@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "typer",
    "requests",
    "rich",
    "google-genai",
]

[project.scripts]
ai-pkg = "ai_pkg.cli:app"

[project.optional-dependencies]
dev = ["pytest", "flake8", "black"]