[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pkg"
dynamic = ["version"]
description = "Your AI-Powered Development Environment Wizard for Arch Linux - Transform plain English into perfectly crafted development environments"
authors = [{ name = "Rohan Kumar Singh", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer",
    "requests",
    "rich",
    "google-genai"
]

[project.scripts]
ai-pkg = "ai_pkg.cli:app"

[project.optional-dependencies]
dev = ["pytest", "flake8", "black", "setuptools_scm>=8"]

[tool.setuptools_scm]
# Automatically uses git tags for version
# Fallback version for development builds
fallback_version = "0.0.0+dev"
